<resources>
    <string name="app_name">Grad. Staff</string>

    <!-- Drawer Title-->
    <string name="title_news">News</string>
    <string name="title_programme">Programme</string>
    <string name="title_student">Student</string>
    <string name="title_profile">Account</string>
    <string name="title_graduation">Graduation</string>
    <string name="title_convocation">Convocation</string>
    <string name="title_settings">Settings</string>
    <string name="title_help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="title_logout">Logout</string>
    <!-- Toolbar Menu Title-->
    <string name="title_save">Save</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="title_search">Search</string>
    <string name="title_share">Share</string>
    <string name="title_filter">Filter</string>

    <!-- Bundle keys -->
    <string name="key_student_key">studentKey</string>
    <string name="key_student_id">studentID</string>
    <string name="key_programme_key">programmeKey</string>
    <string name="key_programme_name">programmeName</string>
    <string name="key_datePicker_textView_id">datePickerTextViewId</string>
    <string name="key_timePicker_textView_id">timePickerTextViewId</string>
    <string name="key_fragment_class_name">fragmentClassName</string>
    <string name="key_convocation_key">convocationKey</string>
    <string name="key_session_key">sessionKey</string>
    <string name="key_session_id">sessionId</string>

    <!-- Others -->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="title_add">Add</string>
    <string name="title_approve_all">APPROVE ALL</string>
    <string name="title_approve">APPROVE</string>

    <!-- Array -->
    <string-array name="programme_array">
        <item>Diploma in Accounting</item>
        <item>Diploma in Business Administration</item>
        <item>Diploma in Business Information Systems</item>
        <item>Diploma in Electronic Engineering</item>
    </string-array>
    <string-array name="programme_level_array">
        <item>Diploma</item>
        <item>Bachelor\'s Degree</item>
        <item>Master\'s Degree</item>
        <item>Doctorate</item>
    </string-array>
    <string-array name="faculty_array">
        <item>Centre for Diploma Programme</item>
        <item>Faculty of Business</item>
        <item>Faculty of Computing and Informatics</item>
        <item>Faculty of Creative Multimedia</item>
        <item>Faculty of Engineering</item>
        <item>Faculty of Engineering and Technology</item>
        <item>Faculty of Information Science and Technology</item>
        <item>Faculty of Law</item>
        <item>Faculty of Management</item>
        <item>Graduate School of Management</item>
    </string-array>
    <string-array name="student_status_array">
        <item>Active</item>
        <item>Completed</item>
        <item>Pending approval</item>
    </string-array>
    <string-array name="seat_status_array">
        <item>Available</item>
        <item>Occupied</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="muet_grading_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
